abstract final class DemoData {
  static const String solanaAddressFull =
      '7xKXtg2CW87d97TXJSDpbD5jBkheTqA83TZRuJosgAsU';
  static const String solanaAddressShort = '7xKXtg...sgAsU';
  static const String bankAccountFull = 'Vietcombank •••• 2868';
  static const String bankName = 'Vietcombank';
  static const String bankAccountLast4 = '•••• 2868';
  static const String nivexId = 'NVX-000001';
  static const String userName = 'Minh Anh';
}
